# Script

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  config.in.hpp  main.script  meson.build  program.script  xmake.lua
Language/: meson.build
Language/AST/: meson.build
Language/AST/Core/: meson.build
Language/AST/Core/include/Language/AST/Core/: Instruction.hpp  InstructionContainer.hpp  Interpreter.hpp
Language/AST/File/: meson.build
Language/AST/File/include/Language/AST/File/: FileScope.hpp  ImportDeclaration.hpp
Language/AST/Function/: meson.build
Language/AST/Function/include/Language/AST/Function/: Function.hpp  FunctionDeclaration.hpp  FunctionScope.hpp  FunctionSignature.hpp
Language/AST/Function/src/: FunctionDeclaration.cpp
Language/AST/Instruction/: meson.build
Language/AST/Instruction/include/Language/AST/Instruction/: Bracket.hpp  ControlStructure.hpp  FunctionCall.hpp  Operator.hpp  Return.hpp
Language/AST/Instruction/src/: Bracket.cpp  ControlStructure.cpp  FunctionCall.cpp  Operator.cpp
Language/AST/Namespace/: meson.build
Language/AST/Namespace/include/Language/AST/Namespace/: ImportDeclaration.hpp  NamespaceCall.hpp  NamespaceDeclaration.hpp  NamespaceScope.hpp
Language/AST/Namespace/src/: NamespaceDeclaration.cpp
Language/AST/Object/: meson.build
Language/AST/Object/include/Language/AST/Object/: Class.hpp  Instance.hpp  Instantiation.hpp  ObjectScope.hpp  Type.hpp  Value.hpp
Language/AST/Object/src/: Class.cpp  Instantiation.cpp
Language/AST/Operator/: meson.build
Language/AST/Operator/include/Language/AST/Operator/: Addition.hpp  Assignment.hpp  Equality.hpp  Member.hpp  Multiplication.hpp  NotEquality.hpp  Operator.hpp
Language/AST/ParsingTools/: meson.build
Language/AST/ParsingTools/include/Language/AST/ParsingTools/: Context.hpp  Cursor.hpp  ParserScope.hpp
Language/AST/Scope/: meson.build
Language/AST/Scope/Type/: meson.build
Language/AST/Scope/Type/src/: Number.cpp  String.cpp  Value.cpp
Language/AST/Scope/include/Language/AST/Scope/: BaseScope.hpp  FileScope.hpp  FunctionScope.hpp  NormalScope.hpp  Object.hpp  ObjectScope.hpp  VariableScope.hpp
Language/AST/Scope/src/: BaseScope.cpp  NormalScope.cpp  VariableScope.cpp
Language/AST/Type/: meson.build
Language/AST/Type/include/Language/AST/Type/: Boolean.hpp  Function.hpp  Number.hpp  String.hpp  Type.hpp  Void.hpp
Language/AST/Type/src/: Number.cpp  String.cpp  Type.cpp
Language/AST/Value/: meson.build
Language/AST/Value/include/Language/AST/Value/: Number.hpp  String.hpp  Value.hpp
Language/AST/Variable/: meson.build
Language/AST/Variable/include/Language/AST/Variable/: Variable.hpp  VariableDeclaration.hpp  VariableScope.hpp  (+1 more)
Language/AST/Variable/src/: Variable.cpp  VariableDeclaration.cpp  VariableScope.cpp
Language/AST/include/Language/AST/: Instruction.hpp  InstructionContainer.hpp  Interpreter.hpp
Language/Instruction/: meson.build
Language/Instruction/include/Language/Instruction/: Bracket.hpp  Class.hpp  ControlStructure.hpp  FunctionCall.hpp  FunctionDeclaration.hpp  FunctionStatement.hpp  ImportDeclaration.hpp  ImportStatement.hpp  Object.hpp  Operator.hpp  Return.hpp  Value.hpp  Variable.hpp  VariableDeclaration.hpp
Language/Instruction/src/: Bracket.cpp  Class.cpp  ControlStructure.cpp  FunctionCall.cpp  FunctionDeclaration.cpp  FunctionStatement.cpp  ImportDeclaration.cpp  ImportStatement.cpp  Object.cpp  Operator.cpp  Return.cpp  Value.cpp  Variable.cpp  VariableDeclaration.cpp
Language/Parser/: meson.build
Language/Parser/Declaration/: meson.build
Language/Parser/Instruction/: meson.build
Language/Parser/Operator/: meson.build
Language/Parser/Value/: meson.build
Language/Parser/include/Language/AST/Scope/: InstructionScope.hpp  LanguageScope.hpp
Language/Parser/include/Language/Parser/: Number.hpp  Parser.hpp  String.hpp
Language/Parser/src/: Parser.cpp
Language/Scope/: meson.build
Language/Scope/Type/: meson.build
Language/Scope/Type/src/: Number.cpp  String.cpp  Value.cpp
Language/Scope/include/Language/Scope/: BaseScope.hpp  FileScope.hpp  FunctionScope.hpp  Object.hpp  ObjectScope.hpp  VariableScope.hpp
Language/Scope/src/: BaseScope.cpp  VariableScope.cpp
Language/include/Language/: AST.hpp  ASTRoot.hpp  Bracket.hpp  ControlStructure.hpp  FunctionCall.hpp  FunctionStatement.hpp  Instruction.hpp  InstructionContainer.hpp  Interpreter.hpp  Language.hpp  Object.hpp  Operator.hpp  Parser.hpp  Return.hpp  Value.hpp  Variable.hpp
Language/src/: AST.cpp  ASTRoot.cpp  Bracket.cpp  ControlStructure.cpp  FunctionCall.cpp  FunctionStatement.cpp  Object.cpp  Operator.cpp  Return.cpp  Value.cpp  Variable.cpp
UnitTests/: meson.build
UnitTests/include/UnitTests/: Class.hpp  Function.hpp  Namespace.hpp  Operation.hpp  Variable.hpp
UnitTests/src/: main.cpp
old/Language/: meson.build
old/Language/AST/: meson.build
old/Language/AST/Function/: meson.build
old/Language/AST/Function/src/: FunctionDeclaration.cpp
old/Language/AST/Instruction/: meson.build
old/Language/AST/Instruction/src/: Bracket.cpp  ControlStructure.cpp  FunctionCall.cpp
old/Language/AST/Namespace/: meson.build
old/Language/AST/Object/: meson.build
old/Language/AST/Object/src/: Class.cpp  Instantiation.cpp
old/Language/AST/Operator/: meson.build
old/Language/AST/ParsingTools/: meson.build
old/Language/AST/Scope/: meson.build
old/Language/AST/Scope/src/: NormalScope.cpp
old/Language/AST/Type/: meson.build
old/Language/AST/Value/: meson.build
old/Language/AST/Variable/: meson.build
old/Language/AST/Variable/src/: Variable.cpp  VariableDeclaration.cpp
old/Language/Parser/: meson.build
old/Language/Parser/Declaration/: meson.build
old/Language/Parser/Instruction/: meson.build
old/Language/Parser/Operator/: meson.build
old/Language/Parser/Value/: meson.build
old/Language/VM/: meson.build
old/Language/include/Script/Language/: ASTRoot.hpp  Grammar.hpp  Language.hpp
old/Language/src/: ASTRoot.cpp
old/res/: meson.build  resources.hpp  resources.in.rc
res/: logo.hxl  (+3 more)
(+133 files in other folders)
